1/17/12 added SimSharingLinearValueControl (implementation identical to SimSharingLogarithmicValueControl! bad!)
1/17/12 add start/EndDrag messages to SimSharingLogarithmicValueControl, cleanup and simplify the sim-sharing hooks in AbstractValueControl
1/17/12 use HALF_UP (nearest neighbor) rounding in DefaultDecimalFormat
1/12/12 Simsharing: Added IP address lookup
1/12/11 SimSharing: #3216, support customization of Swing drag listeners via both subclassing and mutation
1/12/12 Simsharing: Added an option to auto-save data collection log, see #3215
1/11/12 Simsharing: revise SimSharingDragListener (Swing) to use same pattern as SimSharingDragHandler (Piccolo)
1/11/12 Simsharing: factor out SimSharingDragPoints, for use in Swing and Piccolo drag handlers
1/9/12 Simsharing: Converter varargs Parameter to ParameterSet, see #3209
1/6/12 Simsharing: Converted to use interface/enum messages, see #3209
1/5/12 Added user/system/model message types, see #3209
1/5/12 Removed Property<T> descriptions, see #3202
1/3/12 #3202, add missing sim-sharing events to SimSharingLogMenuItem, remember directory last visited in file chooser
1/3/12 #3202, sim-sharing changes related to Swing controls (explicitly specify event "object" for sim-sharing subclasses of Swing components; add "componentType" parameter; add missing sim-sharing subclasses of Swing components - SimSharingJButton, SimSharingJSpinner)
12/30/11 Fixed class to string method for sim sharing
12/22/11 fix NullPointerException in SettableProperty, occurs for all properties that don't have a description when sim-sharing is enabled
12/20/11 add PropertyLabel, for interactive labels that are associated with Swing controls (eg, icon next to radio button or check box)
12/20/11 #3175, more refinements to sim-sharing drag handlers
12/19/11 #3183, added sim-sharing events to AbstractValueControl (slider+textfield)
12/19/11 #3184, Moved server code from phetcommon to simsharing
12/14/11 #3184, repackage sim-sharing, add package doc